# Trevixa-Encode

./: .gitignore  README.md
trevixa/: __init__.py
trevixa/devenv/: README.md  trevixa-encode-ide.sh
trevixa/devenv/python/: ide_main.py
trevixa/encode/: .tmp  CMakeLists.txt  README.md  __init__.py  trevixa-encode.bat  trevixa-encode.sh
trevixa/encode/config/: features.json
trevixa/encode/cpp/: api.cpp  api.hpp  main.cpp
trevixa/encode/datasets/: memory.jsonl  train.json
trevixa/encode/python/: __init__.py  api_entrypoint.py  codex-mcp.py  feature_engine.py  gui_app.py  intellect.py  main.py  memory_store.py  model_manager.py  neural_net.py  safety.py  session_store.py
trevixa/encode/python/connectors/: __init__.py  anthropic_provider.py  github_copilot_provider.py  openai_provider.py
trevixa/encode/python/modes/: __init__.py  text_chat.py  video_chat.py  voice_chat.py
trevixa/encode/tests/: test_runtime.py
trevixa/encode/vscext/: README.md  package.json
trevixa/encode/vscext/src/: extension.ts
trevixa/vscext/src/: extension.ts
